piccola modifica all'openapi
